@@ -41,8 +41,8 @@ FLTK-1.3
 
   and build it like:
 
-     tar zxvf fltk-1.3.1-source.tar.gz      [or latest 1.3.x version]
-     cd fltk-1.3.1
+     tar zxvf fltk-1.3.2-source.tar.gz      [or latest 1.3.x version]
+     cd fltk-1.3.2
      less README.Unix.txt
      make
      sudo make install
@@ -52,8 +52,8 @@ FLTK-1.3
 Dillo3
 ------
 
-     tar jxvf dillo-3.0.2.tar.bz2
-     cd dillo-3.0.2
+     tar jxvf dillo-3.0.3.tar.bz2
+     cd dillo-3.0.3
      ./configure; make
      sudo make install-strip
 
