@@ -230,18 +230,14 @@ const char *const AboutSplash=
 "<tr>\n"
 " <td bgcolor='#CCCCCC'>\n"
 "  <h4>Release overview</h4>\n"
-"  December 05, 2011\n"
+"  March 31, 2013\n"
 "<tr>\n"
 " <td bgcolor='#FFFFFF'>\n"
 "  <table border='0' cellspacing='0' cellpadding='5'>\n"
 "  <tr>\n"
 "   <td>\n"
 "<p>\n"
-"dillo-3.0.2 brings you some new bits and pieces, as listed below :)\n"
-"<p>\n"
-"After this release, the core team plans to focus on implementing the CSS\n"
-"feature of floating elements. This will <em>greatly</em> improve dillo's\n"
-"web page rendering since many sites have adopted floats instead of tables.\n"
+"dillo-3.0.3 adds some nice new features, as listed below.\n"
 "<p>\n"
 "Dillo3 uses the FLTK GUI toolkit's 1.3.x series. In June, fltk-1.3.0 was\n"
 "<a href='http://fltk.org/articles.php?L1086'>released</a>,\n"
@@ -270,11 +266,10 @@ const char *const AboutSplash=
 "  <tr>\n"
 "   <td>\n"
 "<ul>\n"
-"<li>Digest authentication.\n"
-"<li>Rework line breaking and fix white-space:nowrap handling.\n"
-"<li>text-transform property.\n"
-"<li>Locale-independent ASCII character case handling (fixes Turkic locales).\n"
-"<li>Bind Ctrl-{PageUp,PageDown} to tab-{previous,next}.\n"
+"<li>Automatic hyphenation (includes penalty_* preferences that control line-breaking).\n"
+"<li>Introduced the domainrc mechanism for finer-grained control than filter_auto_requests had provided.\n"
+"<li>Added user interface color preferences (ui_*).\n"
+"<li>Support for CSS display property.\n"
 "</ul>\n"
 "  </table>\n"
 "</table>\n"
